--- a/メール送信/project.json
+++ b/メール送信/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "請求書発行二回目以降",
+  "name": "メールシステム",
   "projectId": "9f21a799-0983-409c-bb7f-2f853b1cd89a",
   "description": "空のプロジェクト",
   "main": "Main.xaml",
